source/components/app/app.scss
@import "../styles/color.palette";
@import "../styles/typography";
@import "../styles/responsive";

.app-banner {
    background-color: $primary-color;
    border-bottom: 0.2em solid $secondary-color;
}

article {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

.app-font-headline {
    @include app-font-md;
    text-align: center;

    @include tablet {
        @include app-font-lg;
    }

    @include desktop {
        @include app-font-xl;
    }
}

.display-none {
    display: none;
}

.app-footer {
    display: flex;
    height: 5em;
    ul {
        width: 20em;
        height: 5em;
        margin: auto;
    }
    small {
        width: 12em;
        height: 1em;
        margin: auto;
    }
}

